--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <title>Ordini</title>
+    <title>MyApp</title>
     
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
